<resources>
    <string name="app_name">AT</string>
    <string name="start_training">Start training</string>
    <string name="welcome">Welcome to AT</string>
    <string name="settings">Settings</string>
    <string name="about"><u>About</u></string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="your_trainings">Your trainings</string>
</resources>