<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"

        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="40sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            />

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">




        <Button
            android:id="@+id/start_button"
            style="@style/MainPageButtons"
            android:text="@string/start_training"/>
        <Button
            android:id="@+id/button_history"
            style="@style/MainPageButtons"
            android:text="@string/your_trainings"/>
        <Button
            android:id="@+id/settings_button"
            style="@style/MainPageButtons"
            android:text="@string/settings"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/about"
            android:textColor="#000DFF"
            android:textSize="20sp"/>




    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>